@@ -617,6 +617,7 @@ static PyObject * rpmReadHeaders (FD_t fd) {
 	providePackageNVR (header);
 	h = (hdrObject *) PyObject_NEW(PyObject, &hdrType);
 	h->h = header;
+	h->sigs = NULL;
 	h->fileList = h->linkList = h->md5list = NULL;
 	h->uids = h->gids = h->mtimes = h->fileSizes = NULL;
 	h->modes = h->rdevs = NULL;
@@ -669,6 +670,7 @@ static PyObject * hdrLoad(PyObject * self, PyObject * args) {
 
     h = (hdrObject *) PyObject_NEW(PyObject, &hdrType);
     h->h = hdr;
+    h->sigs = NULL;
     h->fileList = h->linkList = h->md5list = NULL;
     h->uids = h->gids = h->mtimes = h->fileSizes = NULL;
     h->modes = h->rdevs = NULL;
@@ -981,6 +983,7 @@ rpmdbSubscript(rpmdbObject * s, PyObject * key) {
 
     h = PyObject_NEW(hdrObject, &hdrType);
     h->h = NULL;
+    h->sigs = NULL;
     {	rpmdbMatchIterator mi;
 	mi = rpmdbInitIterator(s->db, RPMDBI_PACKAGES, &offset, sizeof(offset));
 	if ((h->h = rpmdbNextIterator(mi)) != NULL)
@@ -1044,6 +1047,7 @@ rpmdbMINext(rpmdbMIObject * s, PyObject * args) {
 
     ho = PyObject_NEW(hdrObject, &hdrType);
     ho->h = headerLink(h);
+    ho->sigs = NULL;
     ho->fileList = ho->linkList = ho->md5list = NULL;
     ho->uids = ho->gids = ho->mtimes = ho->fileSizes = NULL;
     ho->modes = ho->rdevs = NULL;
